examples/test/testpolicy12062.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12062
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key17: value31
      key34: value48
      key19: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value9
          key26: value48
      podSelector:
        matchLabels:
          key35: value27
          key12: value5
          key13: value7
